# buildarr-prowlarr

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
buildarr_prowlarr/: __init__.py  api.py  cli.py  exceptions.py  manager.py  plugin.py  secrets.py  types.py  util.py
buildarr_prowlarr/config/: __init__.py  types.py
buildarr_prowlarr/config/settings/: __init__.py  general.py  notifications.py  tags.py  ui.py
buildarr_prowlarr/config/settings/apps/: __init__.py  applications.py  sync_profiles.py
buildarr_prowlarr/config/settings/download_clients/: __init__.py  base.py  torrent.py  usenet.py
buildarr_prowlarr/config/settings/indexers/: __init__.py  indexers.py  proxies.py
docs/: index.md  release-notes.md
docs/configuration/: host.md
docs/configuration/settings/: download-clients.md  general.md  notifications.md  tags.md  ui.md
docs/configuration/settings/apps/: applications.md  sync-profiles.md
docs/configuration/settings/indexers/: indexers.md  proxies.md
